cpp/test/FreezeScript/dbmap/fail/08_old.ice
module Test
{

enum E { E1, E2, E3 };

struct S1
{
    float m1;
    long m2;
    string m3;
    E m4;
};

sequence<string> Seq1;
dictionary<byte, string> D1;

interface I {};

class C1 implements I
{
    string c1m1;
    string c1m2;
    string c1m3;
    string c1m4;
    string c1m5;
    string c1m6;
    string c1m7;
    string c1m8;
    string c1m9;
    string c1m10;
    string c1m11;
    string c1m12;
    string c1m13;
    string c1m14;
    string c1m15;
    string c1m16;
};

class C2 extends C1
{
    string c2m1;
    string c2m2;
    string c2m3;
    string c2m4;
    string c2m5;
    string c2m6;
    string c2m7;
    string c2m8;
    string c2m9;
    string c2m10;
    string c2m11;
    string c2m12;
    string c2m13;
    string c2m14;
    string c2m15;
    string c2m16;
};

struct S2
{
    string m1;
    string m2;
    string m3;
    string m4;
    string m5;
    string m6;
    string m7;
    string m8;
    string m9;
    string m10;
    string m11;
    string m12;
    string m13;
    string m14;
    string m15;
    string m16;
};

};
